--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Weather API Results</h1>
 
     <form action="/" method="post">
-        <label for="zipInput">Zip Code: </label>
+        <label for="zipInput">City Name: </label>
         <input id = "zipInput" type="text" name="zipInput">
         <button type="submit">Go</button>
     </form>
